# GctkC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: crc64.h  gctk.h  gctk_common.h  gctk_debug.h  gctk_filesys.h  gctk_hashmap.h  gctk_lua.h  gctk_math.h  gctk_mem.h  gctk_msgbox.h  gctk_shader.h  gctk_sprite.h  gctk_string.h  gctk_texture.h  gctk_vector.h
src/: crc64.c  gctk.c  gctk_debug.c  gctk_filesys.c  gctk_hashmap.c  gctk_lua.c  gctk_math.c  gctk_mem.c  gctk_msgbox.c  gctk_shader.c  gctk_sprite.c  gctk_string.c  gctk_texture.c  gctk_vector.c
src/lua_bindings/: gctk_lua_color.c  gctk_lua_debug.c  gctk_lua_mat4.c  gctk_lua_math.c  gctk_lua_quat_aa.c  gctk_lua_shader.c  gctk_lua_size_rect.c  gctk_lua_texture.c  gctk_lua_vec2.c  gctk_lua_vec3.c  gctk_lua_vec4.c
test/: main.c
